2013-08-13  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Install licence as standard setup component.

	* src/guimain.h src/setup.rc (ID_PACKAGE_GUI_DISTNAME): Macro
	no longer required; delete definition.

	* src/setup.cpp (pkgSetup::DoFirstTimeInstallation):
	<pkgSetupAction> [ID_PACKAGE_GUI_DISTNAME]: Delete reference.
	<pkgSetupAction> [ID_PACKAGE_BASE_DISTNAME]: Update reference; repeat
	to explicitly address each of "bin", "gui", and "lic" components.

	* Makefile.in (TAG_SCRIPT) [PACKAGE_GUI_DISTNAME]: Delete reference.
	(TAG_SCRIPT) [PACKAGE_BASE_DISTNAME]: Redefine as template.

2013-08-13  Keith Marshall  <keithmarshall@users.sourceforge.net>

	More dialogue box adjustments.

	* src/guimain.rc: Generally clean up white-space distribution.
	(All dialogue templates): Use WS_TABSTOP consistently.

2013-08-13  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Circumvent Windows-7 "Program Compatibility Assistant" misbehaviour.

	* src/manifest.rc (assembly) <compatibility>: Add <supportedOS>
	declarations for each of Vista, Win7, and (tentatively) Win8.

2013-07-30  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Minor modification to "about" dialogue dismissal button.

	* src/guimain.rc (IDD_HELP_ABOUT) <DEFPUSHBUTTON>: Change label text
	to "Dismiss"; add WS_TABSTOP style.

2013-07-30  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Match "about" dialogue caption to main window.

	* src/guimain.rc (IDM_HELP_ABOUT) <MENUITEM>: Match it to...
	(IDD_HELP_ABOUT) <CAPTION>: ...this; make it representative of...
	(ID_MAIN_WINDOW_CAPTION): ...this.

2013-07-30  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Implement "icon legend" display as "help" menu item.

	* src/guimain.rc (IDM_HELP_LEGEND): Make menu item active; define
	template for the dialogue box which it is to call out.

	* src/guiexec.cpp (AppWindowMaker::OnCommand) [IDM_HELP_LEGEND]: New
	case handler; implement dialogue box call out, as a variation on...